--- a/part2/phonebook/src/index.css
+++ b/part2/phonebook/src/index.css
@@ -1,28 +1,11 @@
-input {
-  width: 200px;
-  height: 44px;
-  border: 2px solid #eee;
-  border-radius: 4px;
-  padding: 0px 10px;
-  outline: none;
-  margin-top: 30px;
+*,
+::after, 
+::before{
+  box-sizing: border-box;
 }
 
-button {
-  height: 24px;
-  width: 88px;
-  border-radius: 4px;
-  border: 1px solid #eee;
-  font-weight: bolder;
-  margin-top: 10px;
-  outline: none;
-  box-shadow: 1px 1px 3px 1px rgb(0 0 0 / 30%);
-  margin-left: 10px;
-}
-
-label {
-  text-transform: uppercase;
-  margin-right: 10px;
+body{
+  font-family: 'montserrat';
 }
 
 li,
@@ -32,10 +15,137 @@ ul {
   margin: 0;
 }
 
+h1,h2,h3{
+  margin: 0;
+  padding: 0;
+}
+
+/* main styles  */
+
+.main{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.section_1{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.input_filter{
+  width: 350px;
+}
+
+.form_add{
+  margin-top: 20px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form_group{
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+label{
+  width: 100px;
+  height: 44px;
+  background-color: #333;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  color: #eee;
+}
+
+.input_add{
+  width: 250px;
+  align-self: stretch;
+  border: 1px solid #eee;
+  border-radius: 0;
+}
+
+.header_add{
+  margin-top: 20px;
+}
+
+input {
+  height: 44px;
+  border: 1px solid #eee;
+  border-radius: 5px;
+  padding: 0px 10px;
+  outline: none;
+}
+
+button {
+  height: 44px;
+  width: 150px;
+  border-radius: 4px;
+  border: none;
+  font-weight: bolder;
+  outline: none;
+  box-shadow: 1px 1px 3px 1px rgb(0 0 0 / 30%);
+  margin-left: 10px;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.btn_del{
+  background-color: tomato;
+  border: none;
+  width: 100px;
+}
+
+.btn_add{
+  background-color: #333;
+  border: none;
+  color: #eee;
+}
+
+.title{
+  text-align: center;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #eee;
+}
+
+/* end of section 1 */
+
+/* section 2 styles */
+
+.section_2{
+  border-top: 1px solid #333;
+  width: 100%;
+  padding: 20px;
+}
+
+.section_2 h3{
+  margin-bottom: 20px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 .test {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  background-color: #333;
+  margin-bottom: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.test li {
+  margin-right: auto;
+  color: #eee;
+  margin-left: 10px;
 }
 
 .success {
@@ -50,6 +160,23 @@ ul {
   padding: 15px;
 }
 
+@media screen and (min-width: 600px){
+  .section_2{
+    border-top: 1px solid #333;
+    width: 500px;
+    padding: 20px;
+  }
+}
+
+/* higher than 600px make it display flex */
+/* @media screen and (min-width: 800px){
+
+
 .none {
   display: none;
 }
+
+}
+ */
+
+
