--- a/part5/bloglist-frontend/src/index.css
+++ b/part5/bloglist-frontend/src/index.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: "nunito";
+  font-weight: bold;
 }
 
 .success {
@@ -18,4 +19,31 @@ body {
   border: 2px solid tomato;
   background-color: #eee;
   padding: 15px;
+}
+
+button {
+  outline: none;
+  background-color: #333;
+  color: #eee;
+  border: none;
+  border-radius: 4px;
+  height: 40px;
+  width: 150px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+input {
+  outline: none;
+  border: none;
+  border-radius: 4px;
+  height: 40px;
+  border: 2px solid #333;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  column-gap: 20px;
+  row-gap: 20px;
 }
