--- a/part5/bloglist-frontend/src/index.css
+++ b/part5/bloglist-frontend/src/index.css
@@ -9,6 +9,13 @@ body {
   font-weight: bold;
 }
 
+.app_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .success {
   border: 2px solid #16a25e;
   background-color: #eee;
@@ -28,12 +35,12 @@ button {
   background-color: #333;
   color: #eee;
   border-radius: 4px;
+  cursor: pointer;
 }
 
 .button {
   height: 40px;
   width: 150px;
-  cursor: pointer;
   margin-bottom: 10px;
   font-family: "nunito";
   font-weight: bold;
